# groonga-tokenizer-tinysegmenter

./: Makefile.am  README.md  clean.sh  configure.ac  groonga-tokenizer-tinysegmenter.pc.in
test/suite/: simple.expected  simple.test
tokenizers/: Makefile.am  tinysegmenter.cpp  tinysegmenter.hpp
